feat(spanish-api): Add words with examples endpoint
